src/components/Navbar/Navbar.module.css
.navbar {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 99;
  width: 100vw;
  height: 100px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 2rem;
  background-color: var(--primary-color);
}

.logo {
  width: 90px;
  height: 90px;
}

.navlinks {
  height: 100%;
  list-style: none;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  text-transform: uppercase;
}

.navlinks .navlinksItem {
  height: 100%;
  display: flex;
  align-items: center;
  font-weight: bold;
  font-size: 1rem;
  transition: 0.15s ease-in-out;
}

.navlinks .navlinksItem .linkTag {
  position: relative;
  text-decoration: none;
  padding: 0.4rem 0.8rem;
}

.navlinks .linkTag:hover {
  cursor: pointer;
}

.navlinks .linkTag::before {
  position: absolute;
  content: "";
  width: 12px;
  height: 2px;
  top: 50%;
  left: 0;
  background-color: var(--secondary-color);
  opacity: 0;

  transition: all 0.25s;
  transform: translateY(-50%);
}

.navlinks .linkTag:hover::before {
  left: 50%;
  transform: translateY(-50%) translateX(-50%);
  animation: fade-in-out 0.25s;
}

.navlinks .linkTag::after {
  position: absolute;
  content: "";
  width: 12px;
  height: 2px;
  top: 50%;
  right: 0;
  background-color: var(--secondary-color);
  opacity: 0;

  transition: all 0.25s;
  transform: translateY(-50%);
}

.navlinks .linkTag:hover::after {
  right: 50%;
  transform: translateY(-50%) translateX(50%);
  animation: fade-in-out 0.25s;
}

.navlinks .linkTag span:nth-child(1) {
  position: absolute;
  width: 12px;
  height: 12px;
  top: 50%;
  left: 50%;
  border: 2px solid var(--secondary-color);
  background-color: transparent;
  border-width: 2px 0 0 2px;

  transition: all 0.15s 0.25s;
  opacity: 0;
  transform: translateX(-50%) translateY(-50%);
}

.navlinks .linkTag span:nth-child(2) {
  position: absolute;
  width: 12px;
  height: 12px;
  bottom: 50%;
  right: 50%;
  border: 2px solid var(--secondary-color);
  background-color: transparent;
  border-width: 0 2px 2px 0;

  transition: all 0.15s 0.25s;
  opacity: 0;
  transform: translateX(50%) translateY(50%);
}

.navlinks .linkTag:hover span:nth-child(1) {
  opacity: 1;
  top: 0;
  left: 0;
  transform: translateX(0) translateY(0);
}

.navlinks .linkTag:hover span:nth-child(2) {
  opacity: 1;
  bottom: 0;
  right: 0;
  transform: translateX(0) translateY(0);
}

.navlinks .navlinksItem .activeLinkTag {
  position: relative;
  text-decoration: none;
  padding: 0.4rem 0.8rem;
}

.navlinks .activeLinkTag::before,
.navlinks .activeLinkTag::after {
  display: none;
}

.navlinks .activeLinkTag span:nth-child(1) {
  position: absolute;
  width: 12px;
  height: 12px;
  top: 0;
  left: 0;
  border: 2px solid var(--secondary-color);
  background-color: transparent;
  border-width: 2px 0 0 2px;

  opacity: 1;
  transform: translateX(0) translateY(0);
}

.navlinks .activeLinkTag span:nth-child(2) {
  position: absolute;
  width: 12px;
  height: 12px;
  bottom: 0;
  right: 0;
  border: 2px solid var(--secondary-color);
  background-color: transparent;
  border-width: 0 2px 2px 0;

  opacity: 1;
  transform: translateX(0) translateY(0);
}

.burgerMenuIcon {
  position: absolute;
  top: 50%;
  right: 1rem;
  width: 35px;
  height: 30px;
  display: none;
  flex-direction: column;
  justify-content: space-between;

  transform: translateY(-50%);
}

.burguerIconStroke {
  width: 100%;
  height: 4px;
  background-color: var(--secondary-color);
}

.burguerIconStroke:nth-child(1) {
  animation: shrink-grow 5s infinite linear;
}

.burguerIconStroke:nth-child(2) {
  animation: shrink-grow 5s infinite linear 0.5s;
}

.burguerIconStroke:nth-child(3) {
  animation: shrink-grow 5s infinite linear 1s;
}

.closeMenuIcon {
  position: absolute;
  top: 50%;
  right: 0.3rem;
  display: none;
  justify-content: center;
  align-items: center;

  transform: translateY(-50%);
  font-size: 3.5rem;
}

.mobileNavlinks {
  position: fixed;
  width: 100vw;
  height: 0;
  top: 0;
  left: 0;
  display: none;
  flex-direction: column;
  justify-content: end;
  background-color: var(--primary-color);
  padding: 1.5rem;
}

.mobileNavlinks.open {
  height: calc(100vh - 100px);
  top: 100px;
  animation: grow-down 0.4s ease-in-out;
  visibility: 1;
}

.mobileNavlinks.close {
  top: -100%;
  height: 0;
  animation: shrink-up 0.4s ease-in-out;
  transition: all 0.5s;
  visibility: 0;
}

.mobileNavlinks .navlinksItem {
  position: relative;
  height: auto;
  width: 100%;
  overflow: hidden;
  background-color: transparent;

  transition: all 0.5s;
}

.mobileNavlinks .navlinksItem .linkTag {
  text-align: left;
  text-decoration: none;
  border: none;
  font-size: 8rem;
  font-family: "Staatliches", sans-serif;
  font-weight: 500;
  line-height: 6.4rem;
  letter-spacing: -0.2rem;
  color: transparent;
  background-color: transparent;
  -webkit-text-stroke: 2px var(--secondary-color);
  -webkit-text-stroke-width: 4px;
}

.mobileNavlinks .navlinksItem span {
  position: absolute;
  content: "";
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  z-index: 99;

  text-decoration: none;
  border: none;
  font-size: 8rem;
  font-family: "Staatliches", sans-serif;
  font-weight: 500;
  line-height: 6.4rem;
  letter-spacing: -0.2rem;
  color: var(--secondary-color);

  transition: all 0.4s 0.1s ease-out;
  transform: translateX(-100%);
}

.mobileNavlinks .navlinksItem .activeLinkTag span {
  overflow: hidden;
  transform: translateX(0);
}

.contactButton {
  position: relative;
  text-transform: uppercase;
  font-weight: bold;
  padding: 0.8rem 1.4rem;
  border: none;
  border-radius: 0.3rem;
  background-color: var(--highlights-color);
  font-size: 1rem;
  box-shadow: 2px 2px 4px #6969695e;
  overflow: hidden;

  transition: all 0.5s;
}

.contactButton:hover {
  cursor: pointer;
  background-color: var(--highlights-color-hover);
}

.contactButton::before {
  position: absolute;
  content: "";
  left: 0;
  top: 0;
  width: 100%;
  height: 80%;
  background-image: linear-gradient(
    transparent,
    rgba(235, 235, 235, 0.552),
    transparent
  );

  transform: translateX(-100%) rotate(45deg);
  transition: all 0.4s ease-in-out;
}

.contactButton:hover::before {
  transform: translateX(100%) rotate(45deg);
}

@keyframes fade-in-out {
  0% {
    opacity: 0;
  }

  80% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

@keyframes grow-down {
  0% {
    height: 0;
  }

  100% {
    height: calc(100vh - 100px);
  }
}

@keyframes shrink-up {
  0% {
    height: calc(100vh - 100px);
  }

  100% {
    height: 0;
  }
}

@keyframes shrink-grow {
  0% {
    width: 100%;
  }

  10% {
    width: 0%;
  }

  30% {
    width: 100%;
  }

  100% {
    width: 100%;
  }
}

@media (max-width: 1024px) {
  .navlinksItem {
    font-size: 0.9rem;
  }
  .contactButton {
    font-size: 0.9rem;
  }
}

@media (max-width: 768px) {
  .navlinks {
    display: none;
  }
  .contactButton {
    display: none;
  }
  .burgerMenuIcon {
    display: flex;
  }
  .closeMenuIcon {
    display: flex;
  }
  .mobileNavlinks {
    display: flex;
  }
}

@media (max-width: 540px) {
  .navbar {
    padding: 0 1rem;
  }
  .mobileNavlinks {
    padding: 1rem;
  }
  .mobileNavlinks .navlinksItem .linkTag {
    font-size: 5.5rem;
    line-height: 4.4rem;
    letter-spacing: -0.1rem;
  }
  .mobileNavlinks .navlinksItem span {
    font-size: 5.5rem;
    line-height: 4.4rem;
    letter-spacing: -0.1rem;
  }
}

@media (max-width: 390px) {
  .mobileNavlinks .navlinksItem .linkTag {
    font-size: 5rem;
    line-height: 4rem;
  }
  .mobileNavlinks .navlinksItem span {
    font-size: 5rem;
    line-height: 4rem;
  }
}

@media (max-width: 360px) {
  .mobileNavlinks .navlinksItem .linkTag {
    font-size: 4.6rem;
    line-height: 3.7rem;
  }
  .mobileNavlinks .navlinksItem span {
    font-size: 4.6rem;
    line-height: 3.7rem;
  }
}

